Catalog and create
Add catalog and create

--- a/JS Web/JS Back-end/Exams/End Exam - 30 October 2021/WildWife/views/layouts/main.hbs
+++ b/JS Web/JS Back-end/Exams/End Exam - 30 October 2021/WildWife/views/layouts/main.hbs
@@ -30,10 +30,10 @@
 
             <ul class="menu">
                 <li><a href="/">Home</a></li>
-                <li><a href="/product/post">All Posts</a></li>
+                <li><a href="/product/catalog">All Posts</a></li>
                 {{#if user}}
                 <!-- Logged users -->
-                <li><a href="/product/post">Create Post</a></li>
+                <li><a href="/product/create">Create Post</a></li>
                 <li><a href="/auth/myPosts">Posts of {{user.email}}</a></li>
                 <li><a href="/auth/logout">Logout</a></li>
                 {{else}}
