--- a/JS Web/JS Back-end/Exams/End Exam - 30 October 2021/WildWife/views/details.hbs
+++ b/JS Web/JS Back-end/Exams/End Exam - 30 October 2021/WildWife/views/details.hbs
@@ -49,14 +49,19 @@
                         <div class="card_datails">
                             <h1>Votes</h1>
                             <div class="card_vote">
+                                {{#if product.hasUser}}
                                 <!-- Show the rating of votes, if there are no votes yet, the number must be 0. -->
-                                <p class="PV">Total rating of votes: 0</p>
+                                <p class="PV">Total rating of votes: {{product.rating}}</p>
+                                
                             </div>
+                                {{#if product.isVotes}}
                             <!-- If there are already people who have cast their vote for the post, separate their emails with a comma and a space ", " -->
-                            <!-- <p class="disc">People who voted for the post - alex@gmai.com, petar@gmail.com, petq@gmail.com</p>-->
-
+                            <p class="disc">People who voted for the post - {{product.AllVotesUsers}}</p>
+                                {{else}}
                             <!-- If not display: -->
                             <p class="disc">People who voted for the post - No one has voted yet.</p>
+                            {{/if}}
+                            {{/if}}
                         </div>
                     </div>
                 </div>
