--- a/JS Web/Angular/02. Components/articles-app/src/app/article/article.component.html
+++ b/JS Web/Angular/02. Components/articles-app/src/app/article/article.component.html
@@ -4,6 +4,6 @@
     <button *ngIf="showHideBtn" (click)="hideDesc()">Hide Desc</button>
     <button (click)="toggleImage()">{{imageButtonTitle}}</button>
     <div class="desc" *ngIf="articleDescLen > 0">{{descToShow}}</div>
-    <img *ngIf="imageIsShown" src="{{article.imageUrl}}" alt="article image" />
-   </li>
+    <img *ngIf="imageIsShow" src="{{article.imageUrl}}" alt="article image" />
+</li>
    
