--- a/JS Web/Angular/01. Intro to Typescript and Angular/AssigmentToDo/assigmentTodo-app/src/app/todo/todo.component.html
+++ b/JS Web/Angular/01. Intro to Typescript and Angular/AssigmentToDo/assigmentTodo-app/src/app/todo/todo.component.html
@@ -1,4 +1,9 @@
-<div class="todo">
-    <app-header></app-header>
-   <app-todo-list></app-todo-list>
-</div>
+
+    <li data-id='test1'>{{todo?.name}}
+        <div class="tools">
+            <button class="complete"><i class="fas fa-check"></i></button>
+            <button class="edit">EDIT</button>
+            <button class="delete"><i class="fas fa-times"></i></button>
+        </div>
+    </li>
+   
