--- a/JS Web/Angular/01. Intro to Typescript and Angular/AssigmentToDo/assigmentTodo-app/src/app/todo-list/todo-list.component.html
+++ b/JS Web/Angular/01. Intro to Typescript and Angular/AssigmentToDo/assigmentTodo-app/src/app/todo-list/todo-list.component.html
@@ -1,27 +1,7 @@
 <div class="todolist">
     <h3>List of Works Todo:</h3>
-    <p class="error-info"></p>
+    <p class="error-info">Error</p>
     <ul>
-        <li data-id='test1'>Shopping
-            <div class="tools">
-                <button class="complete"><i class="fas fa-check"></i></button>
-                <button class="edit">EDIT</button>
-                <button class="delete"><i class="fas fa-times"></i></button>
-            </div>
-        </li>
-        <li data-id='test2'>Rent Pay 
-            <div class="tools">
-                <button class="complete"><i class="fas fa-check"></i></button>
-                <button class="edit">EDIT</button>
-                <button class="delete"><i class="fas fa-times"></i></button>
-            </div>
-        </li>
-        <li data-id='test3'>Cleaning
-            <div class="tools">
-                <button class="complete"><i class="fas fa-check"></i></button>
-                <button class="edit">EDIT</button>
-                <button class="delete"><i class="fas fa-times"></i></button>
-            </div>
-        </li>
+        <app-todo *ngFor="let currentTodo of data" [todo]="currentTodo"></app-todo>
     </ul>
 </div>
