--- a/JS Web/Angular/01. Intro to Typescript and Angular/AssigmentToDo/assigmentTodo-app/src/app/todo-list/todo-list.component.html
+++ b/JS Web/Angular/01. Intro to Typescript and Angular/AssigmentToDo/assigmentTodo-app/src/app/todo-list/todo-list.component.html
@@ -2,6 +2,6 @@
     <h3>List of Works Todo:</h3>
     <p class="error-info">Error</p>
     <ul>
-        <app-todo *ngFor="let currentTodo of data" [todo]="currentTodo"></app-todo>
+        <app-todo *ngFor="let currentTodo of data" [todo]="currentTodo" (editEvent)="editTodo($event)"></app-todo>
     </ul>
 </div>
