--- a/JS Web/Angular/04. Workshop Components/Components-workshop/components-workshop/src/styles.css
+++ b/JS Web/Angular/04. Workshop Components/Components-workshop/components-workshop/src/styles.css
@@ -1,1 +1,42 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+body {
+    max-width: 1366px;
+    margin: auto;
+    position: relative;
+    min-height: 100vh;
+}
+
+
+
+
+h2 {
+    text-align: center;
+    border-bottom: 1px dashed #999;
+}
+
+span {
+    font-weight: bold;
+}
+
+button {
+    background-color: #4ebced;
+    color: white;
+}
+
+button:hover {
+    cursor: pointer;
+}
+
+/* header  */
+
+
+/* main  */
+
+
+
+/* theme list item */
+
+
+/* aside  */
