--- a/JS Web/Angular/04. Workshop Components/Components-workshop/components-workshop/src/app/core/navigation/navigation.component.html
+++ b/JS Web/Angular/04. Workshop Components/Components-workshop/components-workshop/src/app/core/navigation/navigation.component.html
@@ -23,7 +23,7 @@
 <nav>
     <ul>
         <li>
-            <a href="#">Home</a>
+            <a routerLink="home">Home</a>
         </li>
         <li>
             <a href="#">Themes</a>
@@ -34,3 +34,4 @@
     </ul>
 </nav>
 </header>
+<router-outlet></router-outlet>
