--- a/JS Web/Angular/04. Workshop Components/Components-workshop/components-workshop/src/app/core/navigation/navigation.component.html
+++ b/JS Web/Angular/04. Workshop Components/Components-workshop/components-workshop/src/app/core/navigation/navigation.component.html
@@ -12,7 +12,7 @@
                 <a href="#">Logout</a>
             </li>
             <li>
-                <a href="#">Login</a>
+                <a routerLink="login">Login</a>
             </li>
             <li>
                 <a href="#">Register</a>
