--- a/JS Web/Angular/04. Workshop Components/Components-workshop/components-workshop/src/app/core/navigation/navigation.component.html
+++ b/JS Web/Angular/04. Workshop Components/Components-workshop/components-workshop/src/app/core/navigation/navigation.component.html
@@ -15,7 +15,7 @@
                 <a routerLink="login">Login</a>
             </li>
             <li>
-                <a href="#">Register</a>
+                <a routerLink="register">Register</a>
             </li>
         </ul>
     </div>
