--- a/JS Web/Angular/04. Workshop Components/Components-workshop/components-workshop/src/app/core/navigation/navigation.component.html
+++ b/JS Web/Angular/04. Workshop Components/Components-workshop/components-workshop/src/app/core/navigation/navigation.component.html
@@ -6,7 +6,7 @@
     <div class="mini-navbar">
         <ul>
             <li>
-                <a href="">John's profile</a>
+                <a routerLink="profile">John's profile</a>
             </li>
             <li>
                 <a href="#">Logout</a>
