Theme and new theme render
Theme and New theme content

--- a/JS Web/Angular/04. Workshop Components/Components-workshop/components-workshop/src/app/core/navigation/navigation.component.html
+++ b/JS Web/Angular/04. Workshop Components/Components-workshop/components-workshop/src/app/core/navigation/navigation.component.html
@@ -9,7 +9,7 @@
                 <a routerLink="profile">John's profile</a>
             </li>
             <li>
-                <a href="#">Logout</a>
+                <a routerLink="logout">Logout</a>
             </li>
             <li>
                 <a routerLink="login">Login</a>
@@ -26,10 +26,10 @@
             <a routerLink="home">Home</a>
         </li>
         <li>
-            <a href="#">Themes</a>
+            <a routerLink="themes">Themes</a>
         </li>
         <li>
-            <a href="#">New Theme</a>
+            <a routerLink="create">New Theme</a>
         </li>
     </ul>
 </nav>
