--- a/JS Web/Angular/04. Workshop Components/Components-workshop/components-workshop/src/app/auth/login/login.component.html
+++ b/JS Web/Angular/04. Workshop Components/Components-workshop/components-workshop/src/app/auth/login/login.component.html
@@ -29,7 +29,7 @@
 
         <p class="text-center">
             Have an account?
-            <a href="#">Register</a>
+            <a routerLink="/auth/register">Register</a>
         </p>
 
     </fieldset>
