--- a/JS Web/Angular/04. Workshop Components/Components-workshop/components-workshop/src/app/feature/themes-list/themes-list.component.html
+++ b/JS Web/Angular/04. Workshop Components/Components-workshop/components-workshop/src/app/feature/themes-list/themes-list.component.html
@@ -1,3 +1,10 @@
+<div class="container">
+    <div *ngIf="!isLogged">
+        <app-home></app-home>
+    </div>
+</div>
+
+
 <div class="theme-title">
                 
     <!-- theme component  -->
