--- a/JS Web/Angular/04. Workshop Components/Components-workshop/components-workshop/src/app/shared/home/home.component.html
+++ b/JS Web/Angular/04. Workshop Components/Components-workshop/components-workshop/src/app/shared/home/home.component.html
@@ -7,13 +7,13 @@
         <div class="logged">
             <ul *ngIf="!isLogged">
                 <li>
-                    <a href="#">
+                    <a routerLink="/auth/login">
                         <i class="fas fa-sign-in-alt"></i>
                         Login
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a routerLink="/auth/register">
                         <i class="fas fa-user-plus"></i>
                         Register
                     </a>
