--- a/JS Web/Angular/04. Workshop Components/Components-workshop/components-workshop/src/app/core/navigation/navigation.component.html
+++ b/JS Web/Angular/04. Workshop Components/Components-workshop/components-workshop/src/app/core/navigation/navigation.component.html
@@ -28,10 +28,10 @@
             <a routerLink="home">Home</a>
         </li>
         <li>
-            <a routerLink="themes">Themes</a>
+            <a routerLink="/themes/list">Themes</a>
         </li>
         <li>
-            <a routerLink="create">New Theme</a>
+            <a routerLink="/themes/create">New Theme</a>
         </li>
     </ul>
 </nav>
