--- a/JS Web/Angular/04. Workshop Components/Components-workshop/components-workshop/src/app/feature/themes-list/themes-list.component.html
+++ b/JS Web/Angular/04. Workshop Components/Components-workshop/components-workshop/src/app/feature/themes-list/themes-list.component.html
@@ -11,7 +11,7 @@
     <div *ngFor="let theme of themesList" class="theme-container">
         <div class="theme-name-wrapper">
             <div class="theme-name">
-                <a routerLink="themes/details/{{theme._id}}" class="normal">
+                <a routerLink="/themes/{{theme._id}}" class="normal">
                     <h2>{{theme.themeName}}</h2>
                 </a>
                 <div class="columns">
