--- a/JS Web/Angular/04. Workshop Components/Components-workshop/components-workshop/src/app/feature/create/create.component.css
+++ b/JS Web/Angular/04. Workshop Components/Components-workshop/components-workshop/src/app/feature/create/create.component.css
@@ -1,4 +1,3 @@
-/* new-theme */
 
 .new-theme-border {
     border: 1px solid;
@@ -7,13 +6,13 @@
     margin: auto;
     margin-top: 2em;
     padding: 1em;
-}
-
-.new-theme-border .input {
+  }
+  
+  .new-theme-border .input {
     margin-bottom: 1em;
-}
-
-.header-background {
+  }
+  
+  .header-background {
     background-color: #4ebced;
     border: 1px solid #4ebced;
     padding: 1.5em;
@@ -21,65 +20,66 @@
     margin-bottom: 1em;
     border-top-right-radius: 1em;
     border-top-left-radius: 1em;
-}
-
-.header-background span {
+  }
+  
+  .header-background span {
     background-color: #fff;
     padding: 0.5em;
     margin-top: 1em;
     border-radius: 0.3em;
-}
-
-.title, .new-theme-content {
+  }
+  
+  .title,
+  .new-theme-content {
     display: flex;
     flex-direction: column;
-}
-
-.new-theme-content {
+  }
+  
+  .new-theme-content {
     min-height: 100%;
     width: 100%;
     padding: 0;
     margin: 0;
-}
-
-.new-theme-content textarea {
+  }
+  
+  .new-theme-content textarea {
     width: 100%;
     padding: 0.5em;
     margin: 0;
-}
-
-.new-theme-content label {
+  }
+  
+  .new-theme-content label {
     margin-bottom: 0.3em;
-}
-
-.new-theme-title input {
+  }
+  
+  .new-theme-title input {
     width: 55%;
     border-radius: 0.3em;
     padding: 0.35em;
-}
-
-button+button {
+  }
+  
+  button + button {
     margin-left: 1rem;
-}
-
-.new-theme-buttons {
-    margin-top: 1em;
+  }
+  
+  .new-theme-buttons {
+    margin: 5em;
     text-align: center;
-}
-
-.new-theme-buttons button {
+  }
+  
+  .new-theme-buttons button {
     padding: 0.4em 1.5em;
     border: 1px solid #333333;
     border-radius: 0.3em;
-}
-
-p.error {
+  }
+  
+  p.error {
     text-align: left;
     border-radius: 0.3em;
     color: red;
     padding-top: 0;
-}
-
-.input-error {
+  }
+  
+  .input-error {
     border-left-color: red;
-}
+  }
