--- a/JS Web/Angular/04. Workshop Components/Components-workshop/components-workshop/src/app/auth/login/login.component.html
+++ b/JS Web/Angular/04. Workshop Components/Components-workshop/components-workshop/src/app/auth/login/login.component.html
@@ -1,4 +1,4 @@
-<form class="login" action="" method="post">
+<form class="login" #form="ngForm" (ngSubmit)="login(form)">
 
     <fieldset>
         <h2>Login Form</h2>
@@ -25,7 +25,7 @@
             Password must be at least 4 characters!
         </p> -->
 
-        <button disabled>Login</button>
+        <button>Login</button>
 
         <p class="text-center">
             Have an account?
