--- a/JS Web/Angular/04. Workshop Components/Components-workshop/components-workshop/src/app/auth/login/login.component.html
+++ b/JS Web/Angular/04. Workshop Components/Components-workshop/components-workshop/src/app/auth/login/login.component.html
@@ -5,7 +5,7 @@
 
         <p class="field field-icon">
             <label for="email"><span><i class="fas fa-envelope"></i></span></label>
-            <input class="input-error" type="email" name="email" id="email" placeholder="john.doe@gmail.com">
+            <input class="input-error" type="email" name="email" id="email" placeholder="john.doe@gmail.com" ngModel #inputEmail="ngModel" required>
         </p>
         <p class="error">
             Email is required!
@@ -16,7 +16,7 @@
 
         <p class="field field-icon">
             <label for="password"><span><i class="fas fa-lock"></i></span></label>
-            <input type="password" name="password" id="password" placeholder="******">
+            <input type="password" name="password" id="password" placeholder="******" ngModel #inputPassword="ngModel" required>
         </p>
         <!-- <p class="error">
             Password is required!
