--- a/Front-End/HTML&CSS/04. CSS Box Model/Exercise 2/styles/layout.css
+++ b/Front-End/HTML&CSS/04. CSS Box Model/Exercise 2/styles/layout.css
@@ -10,9 +10,36 @@ body {
 
 .site-header {
     border-bottom: 2px solid #000;
+    position: relative;
+}
+
+.site-header p {
+    border: 2px solid red;
+    margin-top: 2em;
+    width: 20em;
+    height: 0.5em;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .site-footer {
     border-bottom: 2px solid #000;
     padding-top: 1em;
+}
+
+.box {
+    width: 10em;
+    height: 20em;
+    border: 2px solid black;
+    margin: 2em 0;
+    position: relative;
+    /* position: absolute; при падащо меню */
+}
+
+
+.item {
+    height: 1em;
+    background: red;
+    
 }
