--- a/Front-End/HTML&CSS/NEW/02. Typography in CSS/Exercises/07. The-Making-Of-A-CSS-Font/styles.css
+++ b/Front-End/HTML&CSS/NEW/02. Typography in CSS/Exercises/07. The-Making-Of-A-CSS-Font/styles.css
@@ -1,1 +1,31 @@
-/* TODO: style the html */
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Orienta&display=swap');
+
+body {
+    background-color: darkred;
+}
+
+h1 {
+    font: 45px "Righteous", cursive;
+    font-weight: normal;
+    line-height: 60px;
+    color:#fff;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+h2 {
+    font-size: 30px;
+    line-height: 50px;
+    letter-spacing: -1px;
+    color: #DFBF84;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+p {
+    font: 16px "Orienta", sans-serif;
+    line-height: 24px;
+    color: #f6f6f6;
+    text-align: center;
+}
