--- a/Front-End/HTML&CSS/NEW/03. Box Model & Position/Exercises/10. Position-playground/style.css
+++ b/Front-End/HTML&CSS/NEW/03. Box Model & Position/Exercises/10. Position-playground/style.css
@@ -1,34 +1,42 @@
 body {
-    display: block;
+    /* box-sizing: border-box; */
     
 }
 
 div:nth-child(1) {
+    
     background-color:rgb(65, 204, 204);
-    padding-top: 50px;
-    padding-bottom: 50px;
+    
     
 }
 
 div:nth-child(2) {
     background-color:rgb(166, 51, 23);
-    padding-top: 20px;
-    padding-bottom: 20px;
     
 }
 
+img:nth-child(1) {
+    width: 300px;
+    height: auto;
+}
+img:nth-child(2) {
+    width: 300px;
+    height: auto;
+}
+
 img {
-    width: 20%;
-    height: 20%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 600px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+   
+    
       
 }
 
 
 .viewport {
     position: relative;
-    width: 90%;
-    height: auto;
+    width: 100%;
+    height: 50%;
+    
 }
