--- a/Front-End/HTML&CSS/NEW/03. Box Model & Position/Exercises/15. Interior-Design-Studio/styles.css
+++ b/Front-End/HTML&CSS/NEW/03. Box Model & Position/Exercises/15. Interior-Design-Studio/styles.css
@@ -1,1 +1,7 @@
-//TODO
+h1 {
+    position: absolute;
+    margin-top: 60px;
+    margin-left: 180px;
+    color: antiquewhite;
+    text-shadow: 1px 1px 20px black;
+}
