--- a/Front-End/HTML&CSS/NEW/03. Box Model & Position/Exercises/16. Jewellery-Website/styles.css
+++ b/Front-End/HTML&CSS/NEW/03. Box Model & Position/Exercises/16. Jewellery-Website/styles.css
@@ -1,1 +1,33 @@
-/* TODO: style the html */
+main {
+    position: relative;
+}
+
+div {
+    position: relative;
+    
+
+}
+
+
+section {
+    position: absolute;
+    
+
+}
+
+.frame {
+    position: absolute;
+    margin-left: 180px;
+    margin-bottom: 250px;
+   
+}
+
+h3 {
+    font-size: 16px;
+    margin: 0px
+}
+span {
+    padding-left: 3px;
+    color: gray;
+    font-size: 14px;
+}
