--- a/Front-End/HTML&CSS/NEW/04. CSS Layout Flexbox/Lab/07. Property-Gap/styles.css
+++ b/Front-End/HTML&CSS/NEW/04. CSS Layout Flexbox/Lab/07. Property-Gap/styles.css
@@ -4,6 +4,7 @@
   width: 220px;
   height: 260px;
   flex-wrap: wrap;
+  gap: 70px;
 }
 
 .flex-container > div {
@@ -11,4 +12,5 @@
   margin: 10px;
   padding: 20px;
   font-size: 30px;
+  
 }
