--- a/Front-End/HTML&CSS/NEW/04. CSS Layout Flexbox/Lab/08. Property-Flex-Grow/styles.css
+++ b/Front-End/HTML&CSS/NEW/04. CSS Layout Flexbox/Lab/08. Property-Flex-Grow/styles.css
@@ -10,4 +10,16 @@
   margin: 10px;
   padding: 20px;
   font-size: 30px;
+  
 }
+
+#one {
+  flex-grow: 1;
+}
+#two {
+  flex-grow: 2;
+}
+#three {
+  flex-grow: 3;
+}
+
