--- a/Front-End/HTML&CSS/NEW/04. CSS Layout Flexbox/Lab/12. Property-Order/styles.css
+++ b/Front-End/HTML&CSS/NEW/04. CSS Layout Flexbox/Lab/12. Property-Order/styles.css
@@ -8,14 +8,17 @@
 
 #box1 {
   background-color: pink;
+  order: 2;
 }
 
 #box2 {
   background-color: lightgreen;
+  order: 0;
 }
 
 #box3 {
   background-color: lightblue;
+  order: 1;
 }
 
 .flex-container > div {
@@ -24,3 +27,5 @@
   padding: 20px;
   font-size: 30px;
 }
+
+
