--- a/Front-End/HTML&CSS/Exams/Regular Exam - 18 Jun 2023/01.Enterprise/style.css
+++ b/Front-End/HTML&CSS/Exams/Regular Exam - 18 Jun 2023/01.Enterprise/style.css
@@ -36,7 +36,8 @@ div {
 }
 
 .avatar {
-    
+    padding-left: 3px;
+    padding-right: 3px;
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -44,7 +45,7 @@ div {
 
 article {
     margin: 20px;
-    box-shadow:  1px 1px 0px  rgba(0, 0, 0, 0.03);
+    box-shadow:  5px 5px 5px #bdbcbc
     
 }
 
@@ -63,7 +64,9 @@ article > span {
     display: flex;
     width: 400px;
     justify-content:space-between;
-    border-top: 1px solid black;
+    border-top: 1px solid rgb(86, 84, 84);
+    
+    
 }
 
 .time {
