--- a/Front-End/HTML&CSS/Exams/Regular Exam - 18 Jun 2023/03.Finbest/style.css
+++ b/Front-End/HTML&CSS/Exams/Regular Exam - 18 Jun 2023/03.Finbest/style.css
@@ -94,7 +94,7 @@ nav>ul a {
 }
 
 .finish {
-    padding: 40px 370px;
+    padding: 40px 330px;
 }
 
 .statistics {
@@ -134,7 +134,6 @@ article {
 .fees {
     padding-top: 30px;
     padding-bottom: 30px;
-    text-align: center;
     gap: 1em;
     background: rgba(228, 223, 223, 0.282);
     
@@ -144,17 +143,25 @@ article {
     display: inline-block;
     text-align: center;
     background: rgb(156, 244, 226);
+    border: 1px solid rgb(156, 244, 226);
+    border-radius: 5px;
+    font-size: 0.8em;
+    font-weight: bold;
+    padding: 5px 7px;
+    
+    
 }
 
 .fees>p {
     font-size: 1.9em;
     font-weight: bold;
+    text-align: center;
 }
 
 .plans {
     display: flex;
-    border: 1px solid lightgray;
-    border-radius: 10px;
+    border: 1px solid rgb(230, 228, 228);
+    border-radius: 30px;
     margin-bottom: 10px;
 }
 
@@ -162,6 +169,7 @@ article {
     padding: 20px;
     display: flex;
     justify-content: center;
+    background-color: white;
     
 }
 
@@ -178,13 +186,15 @@ article {
 
 .plan {
     padding: 0px 10px;
+    
 }
 
 .plan:nth-child(1), .plan:nth-child(2) {
     border-right: 1px solid lightgray;
 }
 .expand {
-    background-color: rgb(156, 244, 226);;
+    padding-top: 20px;
+    background-color: rgb(156, 244, 226);
 }
 
 .cost>span {
@@ -203,10 +213,32 @@ article {
 }
 
 .plan>button {
+    width: 100%;
+    padding: 15px 40px;
     text-align: center;
     border: 1px solid rgb(156, 244, 226);
     background: rgb(156, 244, 226);
     border-radius: 7px;
-    flex: 1 1 1px;
+    font-weight: bold;
+    
 }
 
+.expand button {
+    border: 1px solid black;
+    background: black;
+    color: white;
+    
+    margin-top: 130px;
+}
+
+.expand>.plan>p {
+    font-size: 1.1em;
+    font-weight: bold;
+}
+
+
+footer {
+    padding-top: 0px;
+    margin-top: 0px;
+    padding-left: 310px;
+}
