--- a/Front-End/HTML&CSS/Exams/Retake Exam - 19 April 2022/01. Sign-Up Form_Resources/style.css
+++ b/Front-End/HTML&CSS/Exams/Retake Exam - 19 April 2022/01. Sign-Up Form_Resources/style.css
@@ -28,19 +28,87 @@ body {
 
 
 .image {
-    width: 300px;
+    background-size: cover;
+    background-position: center;
+    width: 320px;
     height: 400px;
     background-image: url("image/cover.jpg");
+    background-repeat: no-repeat;
+
 }
 
 .image>p {
     color: white;
     padding: 1.5em;
     font-weight: bold;
+    padding-bottom: 11em;
 }
 
 .profil {
     width: 300px;
     height: 400px;
     background-color: white;
+    padding: 3em 2em;
+}
+
+label, input {
+    padding: 0.7em;
+    
+}
+
+label {
+    font-size: 10px;
+    color: lightgray;
+}
+
+::placeholder{
+    font-size: 12px;
+    color: rgb(164, 159, 159);
+}
+
+input {
+    border-bottom: 1px solid rgb(164, 159, 159);
+    border-top: none;
+    border-left: none;
+    border-right: none;
+}
+
+h1 {font-size: 1.7em;};
+h2 {font-size: 1.4em;}
+
+h1, h2 {
+    color: white;
+    text-align: center;
+}
+
+.icons {
+    padding-top: 11em;
+    display: flex;
+    justify-content: center;
+    gap: 0.5em;
+}
+
+.buttons {
+    display: flex;
+    justify-content: center;
+    padding-top: 4em;
+    gap:1em
+}
+
+.reg, .reg a {
+    border: 1px solid black;
+    background-color: black;
+    color: white;
+    padding: 0.5em 1.2em;
+    border-radius: 17px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 11px;
+}
+
+.ninja, .ninja a {
+    color: gray;
+    font-size: 10px;
+    padding-top: 0.5em;
 }
