--- a/Front-End/HTML&CSS/Exams/Retake Exam - 19 April 2022/01. Sign-Up Form_Resources/style.css
+++ b/Front-End/HTML&CSS/Exams/Retake Exam - 19 April 2022/01. Sign-Up Form_Resources/style.css
@@ -30,9 +30,10 @@ body {
 .image {
     background-size: cover;
     background-position: center;
+    background-image: brightness(32%);
     width: 320px;
     height: 400px;
-    background-image: url("image/cover.jpg");
+    background-image: linear-gradient(rgba(12, 12, 12, 0.763), rgba(14, 14, 14, 0.927)), url("image/cover.jpg");
     background-repeat: no-repeat;
 
 }
