--- a/Front-End/HTML&CSS/Exams/Retake Exam - 19 April 2022/03. Travel_Resources/styles/style.css
+++ b/Front-End/HTML&CSS/Exams/Retake Exam - 19 April 2022/03. Travel_Resources/styles/style.css
@@ -1,6 +1,9 @@
 @import url(./typography.css);
 @import url(./navigation.css);
-/* @import url(./typography.css); */
+@import url(./layout.css);
+@import url(./card.css);
+@import url(./cards.css);
+@import url(./footer.css);
 
 
 
