--- a/Front-End/HTML&CSS/Exams/Regular Exam - 27 Feb 2022/03. inTime-Company/03. inTime-Company/styles/header.css
+++ b/Front-End/HTML&CSS/Exams/Regular Exam - 27 Feb 2022/03. inTime-Company/03. inTime-Company/styles/header.css
@@ -2,6 +2,8 @@
 header {
     display: flex;
     justify-content: space-between;
+    padding: 2em 0;
+
 }
 
 header>p {
@@ -18,6 +20,7 @@ nav>ul {
     list-style-type: none;
     gap:2em;
     padding-right: 10em;
+    font-weight:500;
 }
 
 nav>ul>li:first-child {
