--- a/Front-End/HTML&CSS/Exams/Regular Exam - 27 Feb 2022/03. inTime-Company/03. inTime-Company/styles/text.css
+++ b/Front-End/HTML&CSS/Exams/Regular Exam - 27 Feb 2022/03. inTime-Company/03. inTime-Company/styles/text.css
@@ -18,7 +18,7 @@
     padding-right:12em;
 }
 
-.text>.button a {
+.button a {
     color: white;
     text-decoration: none;
     border: 1px solid rgba(11, 11, 11, 0.708);
