--- a/Front-End/HTML&CSS/Exams/Regular Exam - 27 Feb 2022/03. inTime-Company/03. inTime-Company/styles/typography.css
+++ b/Front-End/HTML&CSS/Exams/Regular Exam - 27 Feb 2022/03. inTime-Company/03. inTime-Company/styles/typography.css
@@ -15,6 +15,18 @@ html {
     margin: 1em 10em;
 }
 
+header {
+    border-top: 3px solid black;
+}
+
+main, header, footer {
+    border-left: 3px solid black;
+    border-right: 3px solid black;
+}
+
+footer {
+    border-bottom: 3px solid black;
+}
 
 
 
