--- a/Front-End/HTML&CSS/Exams/Exam - 30 October 2022/03. Fitness Site_Ресурси/styles/header.css
+++ b/Front-End/HTML&CSS/Exams/Exam - 30 October 2022/03. Fitness Site_Ресурси/styles/header.css
@@ -1,5 +1,34 @@
 header {
     display: flex;
     justify-content: space-between;
-    background-color: red;
+    background-color: rgb(210, 8, 8);
+    color: rgb(249, 239, 239);
+    font-size: 14px;
+    padding: 1em 4em;
+
 }
+
+footer>p {
+    text-align: center;
+    background-color: rgb(210, 8, 8);
+    padding: 0.3em 0;
+    font-size: 14px;
+}
+
+.left, .top {
+    display: flex;
+    gap: 0.3em;
+    
+}
+
+.left>svg, .top>svg {
+    margin-top: 0.15em;
+}
+
+.right svg {
+   padding-right: 0.2em;
+}
+
+
+
+
