--- a/Front-End/HTML&CSS/Exams/Retake Exam - 14 Dec 2021/03. Pet Care_Resources/03. Pet Care/styles/dog.css
+++ b/Front-End/HTML&CSS/Exams/Retake Exam - 14 Dec 2021/03. Pet Care_Resources/03. Pet Care/styles/dog.css
@@ -54,7 +54,13 @@
     background-position: center;
     position: relative;
     height: 15vh;
-    width: auto;
-    
-    
+    width: auto; 
+    margin-bottom: 1.5em;
+}
+
+.card p {
+    font-size: 9px;
+    color: rgb(150, 149, 149);
+    line-height: 1.7;
+    padding-top: 1em;
 }
