--- a/Front-End/HTML&CSS/Exams/Exam - 30 October 2021/03. Portfolio_Resources/03. Portfolio/styles/card.css
+++ b/Front-End/HTML&CSS/Exams/Exam - 30 October 2021/03. Portfolio_Resources/03. Portfolio/styles/card.css
@@ -51,8 +51,89 @@
 }
 
 .card-list>:nth-child(2) {
-    padding: 3em;
+    padding: 3em 5em;
 }
+
+.img {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.img img {
+    width: 100%;
+}
+
+.card-list>:nth-child(4) img {
+    width: 100%;
+    padding: 3em 0em 4em;
+}
+
+
+
+.feature {
+    padding: 7em 2em;
+    font-size: 10px;
+
+}
+
+.feature>p {
+    padding-top: 1em;
+} 
+
+.card-list>:nth-child(5) {
+    width: 100%;
+    overflow: hidden;
+    padding: 3em;
+    align-items: center;
+
+}
+
+.card-list>:nth-child(5) img {
+    width: 100%;
+} 
+
+.card-list>:nth-child(5)>.two img {
+    width: 140%;
+    
+}
+
+.card-list>:nth-child(6) {
+    text-align: center;
+    padding: 2em 10em;
+    font-size: 10px;
+}
+
+.text3 {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+
+}
+
+.text3>p {
+    padding: 1em 0 2em;
+}
+
+.mail {
+    display: flex;
+    gap: 1em;
+    justify-content: center;
+}
+
+.message {
+    width: 100%;
+    align-items: center;
+}
+
+.button a {
+    background-color: black;
+    color: white;
+    font-size: 8px;
+    padding: 0.5em 17em;
+}
+
+
 
 
 
