--- a/Front-End/HTML&CSS/Exams/Exam - 30 October 2021/03. Portfolio_Resources/03. Portfolio/styles/header.css
+++ b/Front-End/HTML&CSS/Exams/Exam - 30 October 2021/03. Portfolio_Resources/03. Portfolio/styles/header.css
@@ -16,3 +16,10 @@ h1 {
  span {
     font-weight: bold;
 }
+
+footer {
+    background-color: rgb(239,239,239);
+    text-align: center;
+    font-size: 10px;
+
+}
