--- a/Front-End/HTML&CSS/Exams/Exam - 30 October 2021/03. Portfolio_Resources/03. Portfolio/styles/card.css
+++ b/Front-End/HTML&CSS/Exams/Exam - 30 October 2021/03. Portfolio_Resources/03. Portfolio/styles/card.css
@@ -18,6 +18,15 @@
     padding: 1em 0;
 }
 
+.text1::after {
+    content: '';
+    border-left: 1px solid black;
+    padding-bottom: 3em;
+
+}
+
+
+
 .hero, .camera {
     max-width: 100%;
 }
@@ -40,6 +49,14 @@
 
 .card .text2>p {
     padding-top: 1em;
+}
+
+.text2 h1::before {
+    content: '';
+    border-top: 1px solid black;
+    padding-left:2em;
+    text-align: center;
+
 }
 
 .icons {
@@ -79,7 +96,15 @@
 
 .feature>p {
     padding-top: 1em;
+    padding-bottom: 1em;
 } 
+
+.feature::after {
+    content: '';
+    border-left: 1px solid black;
+    padding-bottom: 3em;
+
+}
 
 .card-list>:nth-child(5) {
     width: 100%;
@@ -93,10 +118,6 @@
     width: 100%;
 } 
 
-.card-list>:nth-child(5)>.two img {
-    width: 100%;
-    
-}
 
 .card-list>:nth-child(6) {
     text-align: center;
@@ -104,7 +125,7 @@
     font-size: 10px;
 }
 
-.card-list img:hover {
+.card-list>:nth-child(5) img:hover {
     transform: scale(1.5);
 }
 
@@ -112,6 +133,7 @@
     display: flex;
     flex-direction: column;
     gap: 1em;
+    align-items: center;
 
 }
 
@@ -119,22 +141,41 @@
     padding: 1em 0 2em;
 }
 
-.mail {
+.form {
     display: flex;
+    flex-direction: column;
+    width: 400px;
     gap: 1em;
-    justify-content: center;
-}
-
-.message {
-    width: 100%;
     align-items: center;
 }
 
-.button a {
+.mail {
+    display: flex;
+    justify-content: center;
+    gap: 1.5em;
+    width: 100%;
+}
+
+textarea {
+    width: 100%;
+}
+
+input {
+    width: 100%;
+}
+
+.button a, .button {
     background-color: black;
     color: white;
     font-size: 8px;
-    padding: 0.5em 17em;
+    width: 100%;
+    padding: 0.5em 0;
+}
+
+::placeholder {
+    font-size: 10px;
+    padding: 0.7em;
+    
 }
 
 
