--- a/Front-End/HTML&CSS/Exams/Exam - 01 Nov 2020/03. Fees-Landing-Page/styles/layout.css
+++ b/Front-End/HTML&CSS/Exams/Exam - 01 Nov 2020/03. Fees-Landing-Page/styles/layout.css
@@ -10,18 +10,45 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 3em 5em;
+    
     background-image: url(../images/calculator-icon.svg);
-    background-position: center;
+    background-color: rgb(84,84,109);
+    background-position:left;
     background-repeat: no-repeat;
-    background-size: contain;
-
-
+    position: relative;
 }
+
+.fees h1 {
+    color: white;
+    margin-top: 2em;
+}
+
 .card-list {
     display: flex;
     gap: 1.5em;
     justify-content: center;
-
+    position: absolute;
+    top: 40%;
+    padding: 0 5em;
 }
+
+.education {
+    padding: 13em 17em 5em;
+    
+}
+
+.finance {
+    padding: 0 9em;
+}
+
+footer {
+    background-color: rgb(84,84,109);
+    text-align: center;
+    padding: 1em 0;
+}
+
+
+
+
+
 
