--- a/Front-End/HTML&CSS/Exams/Exam - 01 Nov 2020/03. Fees-Landing-Page/styles/style.css
+++ b/Front-End/HTML&CSS/Exams/Exam - 01 Nov 2020/03. Fees-Landing-Page/styles/style.css
@@ -2,3 +2,5 @@
 @import url('./layout.css');
 @import url('./header.css');
 @import url('./card.css');
+@import url('./education.css');
+@import url('./finance.css');
