--- a/Front-End/HTML&CSS/Exams/Exam - 01 Nov 2020/03. Fees-Landing-Page/styles/card.css
+++ b/Front-End/HTML&CSS/Exams/Exam - 01 Nov 2020/03. Fees-Landing-Page/styles/card.css
@@ -1,5 +1,95 @@
 .card {
-    border: 1px solid lightgray;
+    display: flex;
+    flex-direction: column;align-items: stretch;
+    border: 1px solid rgb(227,227,227);
     width: 30%;
     text-align: center;
+    border-radius: 6px;
+    background-color: white;
+    
+    
 }
+
+.card>div {
+    flex: 1 0 auto;
+    padding: 2.5em 2.5em 0;
+}
+
+.card.one h4 {
+    font-weight: normal;
+}
+
+.button {
+    padding: 4em;
+    display: block;
+}
+
+.button a {
+    display: block;
+    color: white;
+    text-decoration: none;
+    background-color: rgb(154,93,198);
+    padding: 1em 1.5em;
+    border-radius: 15px;
+    font-size: 10px;
+}
+
+.card.two h2, .card.three h2 {
+    padding-bottom: 1em;
+}
+
+.card.two>.text>p, .card.three>.text>p {
+    padding-bottom: 1.5em;
+}
+
+.card-list section {
+    display: flex;
+    justify-content: center;
+    flex-shrink: 0;
+    color: white;
+    font-weight: normal;
+    gap: 4em;
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
+}
+
+
+section div {
+    text-align: center;
+    padding: 1em 0;
+    
+}
+
+.card.one section {
+    background-color: rgb(12,163,70);
+}
+
+.card.one>section h3 {
+    padding-bottom: 0.5em;
+}
+
+.card.two section {
+    background-color: rgb(77,110,140);
+    align-items: center;
+}
+
+.card.three section {
+    background-color: rgb(78,60,169);
+    align-items: center;
+}
+
+.card.two>section>div:nth-child(1), .card.three>section>div:nth-child(1) {
+   border-right: 1px solid white;
+    padding-right: 2em;
+}
+
+.card.two section .price, .card.three section .price {
+    padding-bottom: 0.7em;
+}
+
+
+
+
+
+
+
