--- a/Front-End/HTML&CSS/Exams/Exam - 01 Nov 2020/03. Fees-Landing-Page/styles/typography.css
+++ b/Front-End/HTML&CSS/Exams/Exam - 01 Nov 2020/03. Fees-Landing-Page/styles/typography.css
@@ -21,6 +21,7 @@ h1, h2, h3, h4, h5, h6 {
 h1 {font-size: 1.8em;}
 h2 {font-size: 1.4em;}
 h3 {font-size: 1.2em;}
+h4{font-size: 1em;}
 
 
 p, article, a {
