--- a/Front-End/HTML&CSS/Exams/Exam - 21 March 2020/01. Login/style.css
+++ b/Front-End/HTML&CSS/Exams/Exam - 21 March 2020/01. Login/style.css
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-    background-image: url(./image.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)), url(./image.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
