--- a/Front-End/HTML&CSS/Exams/Retake Exam - 12 Aug 2020/03. Certificates-Landing-Page/styles/layout.css
+++ b/Front-End/HTML&CSS/Exams/Retake Exam - 12 Aug 2020/03. Certificates-Landing-Page/styles/layout.css
@@ -10,3 +10,50 @@
    margin: 2em 7em;
 }
 
+main {
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+}
+
+footer {
+    display: flex;
+    border-top: 2px solid darkgray;
+    position: relative;
+}
+
+
+
+footer .left{
+    display: flex;
+    align-items: center;
+    gap: 1em;
+    color: lightgray;
+}
+
+footer .left .logo {
+    width: 20%;
+}
+
+footer .right ul{
+    display: flex;
+    gap: 2em;
+   
+    
+}
+
+footer .right ul li {
+    display:inline-block;
+    white-space: nowrap;
+    
+}
+
+.left,.right {
+    margin-top: 2em;
+}
+
+.logo img{
+    width: 100%;
+}
+
+
