--- a/Front-End/HTML&CSS/Exams/Retake Exam - 15 Decamber 2020/03. Wirework_Ресурси/03. Wirework/styles/style.css
+++ b/Front-End/HTML&CSS/Exams/Retake Exam - 15 Decamber 2020/03. Wirework_Ресурси/03. Wirework/styles/style.css
@@ -1,3 +1,5 @@
+@import url('./reset.css');
 @import url('./typography.css');
+@import url('./header.css');
 @import url('./layout.css');
-@import url('./');
+@import url('./card.css');
